updated compose files for in mem db usage for test compose file

--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -20,6 +20,8 @@ ENV App__SendGrid__EmailFrom = ''
 
 ENV App__SendGrid__ApiKey = ''
 
+ENV Use__In_Memory_Database=''
+
 RUN dotnet publish API/01_API.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:3.1
