--- a/IdentityServer/Dockerfile.dev
+++ b/IdentityServer/Dockerfile.dev
@@ -5,6 +5,7 @@ ENV DOTNET_CLI_TELEMETRY_OPTOUT 1
 ENV App__Self__IssuerUri = ''
 
 ENV ConnectionStrings__DefaultConnection = ''
+ENV Use__In_Memory_Database=''
 
 ARG BuildConfiguration=Debug
 
