--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,8 +36,8 @@ jobs:
     - uses: actions/checkout@v2
 
 
-    - name: Docker compose up
-      run: docker-compose up --build -d
+    - name: Docker test compose up
+      run: docker-compose -f docker-compose-test.yml up --build -d
 
 
     - name: Sleep for 90 seconds
@@ -45,10 +45,10 @@ jobs:
       with:
         time: 90s
     
-    - name: Docker build XUnit
+    - name: Docker build XUnit container
       run: docker build -t dex-backend_xunit -f API.Tests/Dockerfile .
         
-    - name: Run XUnit container
+    - name: Run XUnit integration test container
       run: docker run -e "ApiAddress=https://api:5001/" -e "IdentityAddress=http://identity:5004/" --network  dex-backend_mssql-network dex-backend_xunit
     
 
