--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -96,7 +96,7 @@ services:
       - App__Elastic__IndexUrl=projects/ 
       - App__SendGrid__EmailFrom=test
       - App__SendGrid__ApiKey=test
-      - Use__In_Memory_Database=true
+      - Use__In_Memory_Database='false'
     networks:
       mssql-network:
       rabbitmq-network:
