--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -43,7 +43,7 @@ services:
       - App__JobScheduler__ClientId=dex-jobscheduler
       - App__JobScheduler__ClientSecret=test
       - App__ApiAuthentication__ClientSecret=test
-      - Use__In_Memory_Database=true
+      - Use__In_Memory_Database='true'
     networks:
       mssql-network:
     ports:
@@ -96,7 +96,7 @@ services:
       - App__Elastic__IndexUrl=projects/ 
       - App__SendGrid__EmailFrom=test
       - App__SendGrid__ApiKey=test
-      - Use__In_Memory_Database='false'
+      - Use__In_Memory_Database='true'
     networks:
       mssql-network:
       rabbitmq-network:
