Squashed commit of the following:
commit 6be30bfb443162685cf7d4456d15e76a426884e3
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 18:00:36 2021 +0100

    clean up

commit 5f5738813a18cbd48cff3c568e558b886d0342eb
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 15:00:57 2021 +0100

    Update CHANGELOG.md

commit 4d2b76a20cf34e8b2dbdccb41459108d81ca2108
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 14:36:33 2021 +0100

    Update docker-compose.yml

commit 0982b1baa243a94e7cb0d04cf1254a45c9eae278
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 14:35:55 2021 +0100

    Update docker-compose.yml

commit b26bdbef8716f210add3ef89e029642f00e70427
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 14:33:39 2021 +0100

    Update docker-compose-test.yml

commit d756bbe4776b63edcda286594b7560c558fbf36b
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 14:33:04 2021 +0100

    Update docker-compose-test.yml

commit 0d73bfe09381ad156ad38a2559b755057a324ef1
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 14:32:27 2021 +0100

    Update docker-compose-staging.yml

commit 4d2762098e008205572e692b8bb075db08cd2735
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 14:31:43 2021 +0100

    Update docker-compose-production.yml

commit 9b586d1109991d8a416e4f0f1692dea39f0d79c9
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 14:30:48 2021 +0100

    Delete appsettings.Test.json

commit ef467a46635da9ec90ba58118bd95d4f58bbe153
Author: Mees van Straten <41986758+MeesvanStraten@users.noreply.github.com>
Date:   Mon Nov 22 14:30:20 2021 +0100

    Update launchSettings.json

commit

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,7 +5,7 @@ on:
     branches: [ develop, master ]
 
 jobs:
-  unit-test:
+  Unit-Tests:
     runs-on: ubuntu-18.04
 
     steps:
@@ -23,24 +23,34 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test --no-restore --verbosity normal --filter FullyQualifiedName!~API.Tests
       env:
         App__SendGrid__ApiKey: ${{secrets.STAGING_SENDGRID_APIKEY }}
         App__SendGrid__EmailFrom: test@dex.software
 
-  integration-test:
+
+  XUnit-Postman-Integration-Tests:
     runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Docker Compose
-      run: docker-compose up --build -d
+
+    - name: Docker test compose up
+      run: docker-compose -f docker-compose-test.yml up --build -d
+
 
     - name: Sleep for 90 seconds
       uses: juliangruber/sleep-action@v1
       with:
         time: 90s
+    
+    - name: Docker build XUnit container
+      run: docker build -t dex-backend_xunit -f API.Tests/Dockerfile .
+        
+    - name: Run XUnit integration test container
+      run: docker run -e "ApiAddress=https://api:5001/" -e "IdentityAddress=http://identity:5004/" --network  dex-backend_mssql-network dex-backend_xunit
+    
 
     - name: Setup node
       uses: actions/setup-node@v1
