Revert "Squashed commit of the following:"
This reverts commit bfb8acc6f5552c5d8934ada0579a98eabcc42f60.

--- a/IdentityServer/Properties/launchSettings.json
+++ b/IdentityServer/Properties/launchSettings.json
@@ -4,7 +4,7 @@
             "commandName": "Project",
             "launchBrowser": true,
             "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Test"
+                "ASPNETCORE_ENVIRONMENT": "Development"
             },
             "applicationUrl": "https://localhost:5005"
         }
