--- a/API/01_API.csproj
+++ b/API/01_API.csproj
@@ -29,6 +29,8 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" /> <!-- 5.0.5 -->
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0-preview1.19506.1" />
         <PackageReference Include="Microsoft.OpenApi" Version="1.1.4" />
@@ -43,10 +45,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Data\06_Data.csproj" />
-        <ProjectReference Include="..\MessageBrokerPublisher\09_MessageBrokerPublisher.csproj" />
-        <ProjectReference Include="..\Models\07_Models.csproj" />
-        <ProjectReference Include="..\Services\02_Services.csproj" />
+        <ProjectReference Include="..\Data\07_Data.csproj" />
+        <ProjectReference Include="..\MessageBrokerPublisher\10_MessageBrokerPublisher.csproj" />
+        <ProjectReference Include="..\Models\08_Models.csproj" />
+        <ProjectReference Include="..\Services\03_Services.csproj" />
     </ItemGroup>
 
 
