--- a/IdentityServer/09_IdentityServer.csproj
+++ b/IdentityServer/09_IdentityServer.csproj
@@ -14,6 +14,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.0" />
         <PackageReference Include="NetEscapades.Configuration.Validation" Version="2.0.0" />
         <PackageReference Include="Sentry.AspNetCore" Version="2.1.1" />
         <PackageReference Include="Sentry.Serilog" Version="2.1.1" />
@@ -23,9 +24,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Data\06_Data.csproj" />
-        <ProjectReference Include="..\Models\07_Models.csproj" />
-        <ProjectReference Include="..\Repositories\04_Repositories.csproj" />
-        <ProjectReference Include="..\Services\02_Services.csproj" />
+        <ProjectReference Include="..\Data\07_Data.csproj" />
+        <ProjectReference Include="..\Models\08_Models.csproj" />
+        <ProjectReference Include="..\Repositories\05_Repositories.csproj" />
+        <ProjectReference Include="..\Services\03_Services.csproj" />
     </ItemGroup>
 </Project>
