--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -40,9 +40,11 @@ ENV App__FfhictOIDC__RedirectUri = ''
 
 ENV SENTRY_DSN = ''
 
+ENV Use__In_Memory_Database=''
+
 RUN dotnet tool install --tool-path ./ dotnet-certificate-tool --version 2.0.1
 
-RUN dotnet publish IdentityServer/08_IdentityServer.csproj -c Release -o out
+RUN dotnet publish IdentityServer/09_IdentityServer.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:3.1
 
