--- a/Repositories.Tests/06_Repositories.Tests.csproj
+++ b/Repositories.Tests/06_Repositories.Tests.csproj
@@ -9,8 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="29.0.2" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
@@ -18,9 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Repositories.Tests\05_Repositories.Tests.csproj" />
-    <ProjectReference Include="..\Repositories\04_Repositories.csproj" />
-    <ProjectReference Include="..\Services\02_Services.csproj" />
+    <ProjectReference Include="..\Data\07_Data.csproj" />
+    <ProjectReference Include="..\Repositories\05_Repositories.csproj" />
   </ItemGroup>
 
 </Project>
