--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -12,6 +12,8 @@ services:
     networks:
       mssql-network:
         ipv4_address: 172.16.238.2
+    ports:
+      - 1433:1433
 
   rabbitmq:
     image: 'bitnami/rabbitmq:3.8.9'
