--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -14,6 +14,7 @@ services:
         ipv4_address: 172.16.238.2
     ports:
       - 1433:1433
+    network_mode: 'host'
 
   rabbitmq:
     image: 'bitnami/rabbitmq:3.8.9'
