added ports to compose files for DB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - MSSQL_SA_PASSWORD=Dexcelence!1
     networks:
       mssql-network:
+    ports:
+      - 1433:1433
 
   identity:
     container_name: identity
