--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -190,6 +190,6 @@ networks:
       driver: default
       config:
         - subnet: 172.16.238.0/24
-    external: false
+    external: true
   rabbitmq-network:
     driver: bridge
