--- a/Data/07_Data.csproj
+++ b/Data/07_Data.csproj
@@ -15,6 +15,8 @@
     <ItemGroup>
       <Compile Remove="Migrations\20210528120743_AddMultipleCallToActions.cs" />
       <Compile Remove="Migrations\20210528120743_AddMultipleCallToActions.Designer.cs" />
+      <Compile Remove="Migrations\20211201095508_addedUserTableConstraints.cs" />
+      <Compile Remove="Migrations\20211201095508_addedUserTableConstraints.Designer.cs" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Bogus" Version="29.0.1" />
