--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,7 +29,7 @@ jobs:
         App__SendGrid__EmailFrom: test@dex.software
 
 
-  XUnit-Postman-Integration-Tests:
+  XUnit-Integration-Tests:
     runs-on: ubuntu-18.04
 
     steps:
