--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -11,7 +11,7 @@ services:
     image: digitalexcellence/database
     networks:
       mssql-network:
-        #ipv4_address: 172.16.238.2
+        ipv4_address: 172.16.238.2
     ports:
       - 1433:1433
     
