feat: added first algorithm test

--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=localhost;Database=identity;User=sa;Password=Dexcelence!1"
     },
     "App": {
         "Frontend": {
