--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
         "DefaultConnection":
-            "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
+            "Server=localhost;Database=identity;User=sa;Password=Dexcelence!1"
     },
     "Logging": {
         "LogLevel": {
