Revert "feat: added first algorithm test"
This reverts commit 50bfc81adeb3077d1657142d5920f5d0b0cf3f29.

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
         "DefaultConnection":
-            "Server=localhost;Database=identity;User=sa;Password=Dexcelence!1"
+            "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
